# dotfiles

./: .bashrc  .gitconfig  .gitignore  .profile  .stowrc  requirements.txt
.config/i3status/: config
.i3/: config
.screenlayout/: 2DisBuero.sh  3DisBuero.sh  OnlyLaptop.sh
flameshot/.config/flameshot/: flameshot.ini
git/: .gitconfig
i3/: .Xmodmap
i3/.config/: picom.conf
i3/.config/i3/: config
i3/.config/i3status/: config
i3/.config/i3status-rust/: config.toml
i3/.config/mako/: mako.conf
i3/.config/sway/: config  config.bauer-t14s  config.db.guse.it
i3/.config/sway-interactive-screenshot/: config.toml
i3/.config/waybar/: config  style.css
media/: .mnamer-v2.json
media/.config/: pavucontrol.ini
media/.config/mpd/: mpd.conf
media/.config/ncmpcpp/: bindings  config
proxy/.config/: proxy.pac
screenlayout/.screenlayout/: 2DisBuero.sh  Küche2.sh  KücheReset.sh  OnlyLaptop.sh
scripts/scripts/: backup  backup.sh  backup_herbert.sh  backup_system.sh  blconnect.py  brightness.sh  btrfs_mount.sh  btrfs_show.sh  capture.py  conf_zsh.sh  connect_boxen  connect_headset  copy_website.sh  display.py  honda_proxy  install_zsh.sh  kernel_info  kernel_info.py  menue.py  prepare_obs.sh  pscods  pyproject.toml  remote.py  remote_windows  scan  scan.py  screen_off.py  screen_power.py  set_wallpaper  sound  sound.py  soundcloud_renamer.py  spotify_toggle_volume.sh  switch_audio  telegram.sh  telegram_msg.sh  toggle_touchpad.sh  wallpaper  wallpaper.py  ydl
scripts/scripts/helper/: display.py  notify.py  process.py  xrandr_command.py
scripts/scripts/services/: clipboard_log.service
shell/: .bashrc  .p10k.zsh  .profile  .zsh  .zshrc  .zshrc_old
ssh/.ssh/: config
x11/: .xinitrc
zsh/: .zshrc
(+18 files in other folders)
